Bug 383198 - Missing preview buttons due to gtkX_preview not found
Summary: Missing preview buttons due to gtkX_preview not found
Status: RESOLVED FIXED
Alias: None
Product: kde-gtk-config
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Manuel Tortosa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-06 11:45 UTC by Fabian Vogt
Modified: 2017-08-09 16:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-08-06 11:45:05 UTC
The gtk2_preview and gtk3_preview helper applications are installed into ${LIBEXEC_INSTALL_DIR}, but looked up with QStandardPaths::findExecutable, which only looks at qgetenv(PATH).
The libexec directory is not part of PATH so the previews are not available.
Comment 1 Aleix Pol 2017-08-09 16:17:55 UTC
Git commit fdb0df568637358d27e2dd315eda2aa32d2d551b by Aleix Pol.
Committed on 09/08/2017 at 16:17.
Pushed by apol into branch 'master'.

Fix look-up of gtk preview modules

M  +2    -0    CMakeLists.txt
A  +1    -0    config.h.cmake
M  +1    -1    gtk3proxies/CMakeLists.txt
M  +1    -1    gtkproxies/CMakeLists.txt
M  +1    -1    gtkproxies/preview.c
M  +2    -1    src/appearancegtk2.cpp
M  +3    -2    src/gtkconfigkcmodule.cpp
M  +1    -0    tests/CMakeLists.txt

https://commits.kde.org/kde-gtk-config/fdb0df568637358d27e2dd315eda2aa32d2d551b