Fix look-up of gtk preview modules

BUG: 383198